Improved and made slight changes to BIM page

--- a/bim.html
+++ b/bim.html
@@ -40,6 +40,7 @@
             <p class="small">The MacLeamy Curve</p>
         </div>
         <div class="video-box">
+            <span>1/3</span>
             <div class="yt-vid-holder">
                 <img src="/images/macleamy-curve.png" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
@@ -49,8 +50,9 @@
     </div>
     <div class="video-info-box">
         <div class="video-box">
+            <span>2/3</span>
             <div class="yt-vid-holder">
-                <img src="/images/macleamy-curve.png" alt="The MacLeamy Curve" />
+                <img src="https://i.ytimg.com/vi/o12aKdw2rJM/maxresdefault.jpg" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/o12aKdw2rJM" title="4D BIM Construction Schedule Animation | 5D Cost Simulation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>        
@@ -66,13 +68,15 @@
             <p class="small">Understanding the Power of Collaboration</p>
         </div>
         <div class="video-box">
+            <span>3/3</span>
             <div class="yt-vid-holder">
-                <img src="/images/macleamy-curve.png" alt="The MacLeamy Curve" />
+                <img src="https://i.ytimg.com/vi/FVlfFrlfTS0/maxresdefault.jpg" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/FVlfFrlfTS0" title="Autodesk Collaborate Pro Overview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>      
         </div>
     </div>
+    <div class="whitespace"></div>
     </main> 
     <script>
         $(".play-button").click((e) => {
