--- a/bim.html
+++ b/bim.html
@@ -30,18 +30,18 @@
         </video>
     </div>  
     <div class="heading-holder">
-        <h2>We speak the same language: <br /> openBIM</h2>
-        <div class="divider"></div>
-        <p>Based on common BIM standards that are compatible with each other</p>
+        <h2 class="scroll-effect">We speak the same language: <br /> openBIM</h2>
+        <div class="divider scroll-effect"></div>
+        <p class="scroll-effect">Based on common BIM standards that are compatible with each other</p>
     </div>
     <div class="video-info-box">
         <div class="info-box">
-            <p class="big">The new strategy: Suiting clients' needs</p>
-            <p class="small">The MacLeamy Curve</p>
+            <p class="big scroll-effect">The new strategy: Suiting clients' needs</p>
+            <p class="small scroll-effect">The MacLeamy Curve</p>
         </div>
         <div class="video-box">
-            <span>1/3</span>
-            <div class="yt-vid-holder">
+            <span class="scroll-effect">1/3</span>
+            <div class="yt-vid-holder hide-video scroll-effect">
                 <img src="/images/macleamy-curve.png" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/oHHY7CxI2_Y" title="The Future of the Building Industry  The Effort Curve" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -50,26 +50,26 @@
     </div>
     <div class="video-info-box">
         <div class="video-box">
-            <span>2/3</span>
-            <div class="yt-vid-holder">
+            <span class="scroll-effect">2/3</span>
+            <div class="yt-vid-holder hide-video scroll-effect">
                 <img src="https://i.ytimg.com/vi/o12aKdw2rJM/maxresdefault.jpg" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/o12aKdw2rJM" title="4D BIM Construction Schedule Animation | 5D Cost Simulation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>        
         </div>
         <div class="info-box">
-            <p class="big">Construction sequencing and cost estimation</p>
-            <p class="small">4D and 5D Example</p>
+            <p class="big scroll-effect">Construction sequencing and cost estimation</p>
+            <p class="small scroll-effect">4D and 5D Example</p>
         </div>
     </div>
     <div class="video-info-box">
         <div class="info-box">
-            <p class="big">Collaborate Pro</p>
-            <p class="small">Understanding the Power of Collaboration</p>
+            <p class="big scroll-effect">Collaborate Pro</p>
+            <p class="small scroll-effect">Understanding the Power of Collaboration</p>
         </div>
         <div class="video-box">
-            <span>3/3</span>
-            <div class="yt-vid-holder">
+            <span class="scroll-effect">3/3</span>
+            <div class="yt-vid-holder hide-video scroll-effect">
                 <img src="https://i.ytimg.com/vi/FVlfFrlfTS0/maxresdefault.jpg" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/FVlfFrlfTS0" title="Autodesk Collaborate Pro Overview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -85,6 +85,7 @@
             $(e.target).parent().find("img").addClass("hidden");
         });
     </script>
+    <script src="/scripts/scroll-effect.js"></script>
     <footer id="footer-wrapper"></footer>
 </body>
 </html>
