--- a/lets-scrum.html
+++ b/lets-scrum.html
@@ -18,6 +18,10 @@
 <body>
     <header id="header-wrapper">       
     </header>
+    <div class="larged-image">
+        <button class="close-button"><i class="fa-solid fa-xmark"></i></button>
+        <img src="" />
+    </div>
     <main class="long-page">
     <div class="small-whitespace"></div>
     <div class="heading-holder lefty" id="lets-scrum">
@@ -45,10 +49,13 @@
     <p class="scroll-effect">Here is a schematic representation of how we implement the BIM method within the Scrum framework:</p>
 
     <div class="large-image scroll-effect">
-        <img class="bias-shadow" src="/images/lets-scrum/ScrumandBIM.jpg" alt="Diagram of how Scrum and BIM interact" />
+        <img class="bias-shadow largeable-image" src="/images/lets-scrum/ScrumandBIM.jpg" alt="Diagram of how Scrum and BIM interact" />
     </div>
+
+    <div style="height: 3vh"></div>
+
     <div class="large-image scroll-effect">
-        <img class="bias-shadow" src="/images/lets-scrum/scrum22-1.jpg" alt="Table of roles in BIM and Scrum" />
+        <img class="bias-shadow largeable-image" src="/images/lets-scrum/scrum22-1.jpg" alt="Table of roles in BIM and Scrum" />
     </div>
 
     <div><a class="image-source" href="https://www.researchgate.net/figure/Responsibilities-of-the-BIM-Manager-BIM-Coordinator-and-BIM-Modeler-based-on-AEC-UK_fig5_327759897" target="_blank">Image source</a></div>
@@ -61,41 +68,41 @@
 
     <p class="scroll-effect">Here you can see some sketches depicting the development of ideas, concepts, or designs as we attempt to apply Scrum in the construction industry.</p>
 
-    <p class="scroll-effect">BEPs and EIRs in the BIM Method: BIM encompasses various documents such as BIM Execution Plans (BEPs) and Employer´s Information Requirements (EIRs), which are essential for the successful implementation of construction projects. These documents can be integrated into the agile project management method of Scrum to further optimize the planning and execution of construction projects.</p>
+    <p class="scroll-effect">BEPs and EIRs in the BIM Method: BIM encompasses various documents such as BIM Execution Plans (BEPs) and Employer's Information Requirements (EIRs), which are essential for the successful implementation of construction projects. These documents can be integrated into the agile project management method of Scrum to further optimize the planning and execution of construction projects.</p>
 
     <div class="image-gallery">
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_01.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_01.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_02.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_02.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_03.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_03.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_04.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_04.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_05.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_05.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_06.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_06.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_07.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_07.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_08.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_08.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_09.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_09.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_10.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_10.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
-        <div class="image-holder scroll-effect bias-shadow">
-            <img src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_11.jpg" alt="Sketch of Scrum in the construction industry" />
+        <div class="image-holder scroll-effect">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_11.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
     </div>
 
@@ -106,8 +113,8 @@
     </div>
 
     <div class="image-info-box">
-        <div class="image-box bias-shadow">
-            <img src="/images/lets-scrum/construction-least-digitized-graph.jpeg" alt="Diagram depicting digitization among different industries" />
+        <div class="image-box">
+            <img class="largeable-image bias-shadow" src="/images/lets-scrum/construction-least-digitized-graph.jpeg" alt="Diagram depicting digitization among different industries" />
         </div>
         <div class="text-box">
             <p class="scroll-effect">As can be seen from the graphic, the construction industry ranks among the least digitized sectors according to the McKinsey Global Institute Industry Digitization Index.</p>
@@ -146,7 +153,7 @@
     <div style="height: 2vh"></div>
 
     <div class="large-image scroll-effect">
-        <img class="bias-shadow" src="/images/lets-scrum/henry-ford-factory.jpeg" alt="Photo from Henry Ford's car factory" />
+        <img class="bias-shadow largeable-image" src="/images/lets-scrum/henry-ford-factory.jpeg" alt="Photo from Henry Ford's car factory" />
     </div>
 
     <div><a class="image-source" style="margin-top: 5vh;" href="https://corporate.ford.com/articles/history/moving-assembly-line.html" target="_blank">Image source</a></div>
@@ -154,6 +161,7 @@
     <div class="whitespace"></div>
     </main> 
     <script src="/scripts/scroll-effect.js"></script>
+    <script src="/scripts/largeable-images.js"></script>
     <footer id="footer-wrapper"></footer>
 </body>
 </html>
