Changed file system

--- a/lets-scrum.html
+++ b/lets-scrum.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Let's Scrum - SIMPHASE</title>
     <link rel="stylesheet" href="/styles/styles.css" />
+    <base href="https://preview.additionalram.com/simphase/">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7786a9f9ae.js" crossorigin="anonymous"></script>
@@ -49,13 +50,13 @@
     <p class="scroll-effect">Here is a schematic representation of how we implement the BIM method within the Scrum framework:</p>
 
     <div class="large-image scroll-effect">
-        <img class="bias-shadow largeable-image" src="/images/lets-scrum/ScrumandBIM.jpg" alt="Diagram of how Scrum and BIM interact" />
+        <img class="bias-shadow largeable-image" src="images/lets-scrum/ScrumandBIM.jpg" alt="Diagram of how Scrum and BIM interact" />
     </div>
 
     <div style="height: 3vh"></div>
 
     <div class="large-image scroll-effect">
-        <img class="bias-shadow largeable-image" src="/images/lets-scrum/scrum22-1.jpg" alt="Table of roles in BIM and Scrum" />
+        <img class="bias-shadow largeable-image" src="images/lets-scrum/scrum22-1.jpg" alt="Table of roles in BIM and Scrum" />
     </div>
 
     <div><a class="image-source" href="https://www.researchgate.net/figure/Responsibilities-of-the-BIM-Manager-BIM-Coordinator-and-BIM-Modeler-based-on-AEC-UK_fig5_327759897" target="_blank">Image source</a></div>
@@ -72,37 +73,37 @@
 
     <div class="image-gallery">
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_01.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_01.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_02.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_02.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_03.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_03.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_04.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_04.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_05.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_05.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_06.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_06.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_07.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_07.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_08.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_08.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_09.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_09.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_10.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_10.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
         <div class="image-holder scroll-effect">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/sketches-for-scrum/Scrum_Skizze_11.jpg" alt="Sketch of Scrum in the construction industry" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/sketches-for-scrum/Scrum_Skizze_11.jpg" alt="Sketch of Scrum in the construction industry" />
         </div>
     </div>
 
@@ -114,7 +115,7 @@
 
     <div class="image-info-box">
         <div class="image-box">
-            <img class="largeable-image bias-shadow" src="/images/lets-scrum/construction-least-digitized-graph.jpeg" alt="Diagram depicting digitization among different industries" />
+            <img class="largeable-image bias-shadow" src="images/lets-scrum/construction-least-digitized-graph.jpeg" alt="Diagram depicting digitization among different industries" />
         </div>
         <div class="text-box">
             <p class="scroll-effect">As can be seen from the graphic, the construction industry ranks among the least digitized sectors according to the McKinsey Global Institute Industry Digitization Index.</p>
@@ -153,15 +154,15 @@
     <div style="height: 2vh"></div>
 
     <div class="large-image scroll-effect">
-        <img class="bias-shadow largeable-image" src="/images/lets-scrum/henry-ford-factory.jpeg" alt="Photo from Henry Ford's car factory" />
+        <img class="bias-shadow largeable-image" src="images/lets-scrum/henry-ford-factory.jpeg" alt="Photo from Henry Ford's car factory" />
     </div>
 
     <div><a class="image-source" style="margin-top: 5vh;" href="https://corporate.ford.com/articles/history/moving-assembly-line.html" target="_blank">Image source</a></div>
 
     <div class="whitespace"></div>
     </main> 
-    <script src="/scripts/scroll-effect.js"></script>
-    <script src="/scripts/largeable-images.js"></script>
+    <script src="scripts/scroll-effect.js"></script>
+    <script src="scripts/largeable-images.js"></script>
     <footer id="footer-wrapper"></footer>
 </body>
 </html>
