--- a/bim.html
+++ b/bim.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BIM - SIMPHASE</title>
     <link rel="stylesheet" href="/styles/styles.css" />
+    <base href="https://preview.additionalram.com/simphase/">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7786a9f9ae.js" crossorigin="anonymous"></script>
@@ -25,7 +26,7 @@
             <h2>Creating a sustainable world through internal planning</h2>
         </div>
         <video width="auto" height="100vh" autoplay muted loop id="background-vid">
-            <source src="/videos/simphase-bim.mp4" type="video/mp4">
+            <source src="videos/simphase-bim.mp4" type="video/mp4">
             <!-- replacement image to display in case video can't load -->
         </video>
     </div>  
@@ -42,7 +43,7 @@
         <div class="video-box">
             <span class="scroll-effect">1/3</span>
             <div class="yt-vid-holder hide-video scroll-effect">
-                <img src="/images/macleamy-curve.png" alt="The MacLeamy Curve" />
+                <img src="images/macleamy-curve.png" alt="The MacLeamy Curve" />
                 <button class="play-button"><i class="fa-solid fa-play"></i></button>
                 <iframe class="yt-vid hidden" width="660" height="371" src="https://www.youtube.com/embed/oHHY7CxI2_Y" title="The Future of the Building Industry  The Effort Curve" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>       
@@ -85,7 +86,7 @@
             $(e.target).parent().find("img").addClass("hidden");
         });
     </script>
-    <script src="/scripts/scroll-effect.js"></script>
+    <script src="scripts/scroll-effect.js"></script>
     <footer id="footer-wrapper"></footer>
 </body>
 </html>
