--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Let's Scrum - SIMPHASE</title>
     <link rel="stylesheet" href="/styles/styles.css" />
+    <base href="https://preview.additionalram.com/simphase/">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7786a9f9ae.js" crossorigin="anonymous"></script>
@@ -32,8 +33,8 @@
     </div>
     <div class="whitespace"></div>
     </main> 
-    <script src="/scripts/scroll-effect.js"></script>
-    <!-- <script src="/scripts/largeable-images.js"></script> -->
+    <script src="scripts/scroll-effect.js"></script>
+    <!-- <script src="scripts/largeable-images.js"></script> -->
     <footer id="footer-wrapper"></footer>
 </body>
 </html>
