--- a/bim.html
+++ b/bim.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BIM - SIMPHASE</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <base href="https://preview.additionalram.com/simphase/">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7786a9f9ae.js" crossorigin="anonymous"></script>
     <script>
         $(document).ready((e) => {
-            $("#header-wrapper").load("/components/header.html");
-            $("#footer-wrapper").load("/components/footer.html");
+            $("#header-wrapper").load("components/header.html");
+            $("#footer-wrapper").load("components/footer.html");
         });
     </script>
 </head>
