--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Us - SIMPHASE</title>
     <link rel="stylesheet" href="styles/styles.css" />
-    <base href="https://preview.additionalram.com/simphase/">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7786a9f9ae.js" crossorigin="anonymous"></script>
@@ -502,7 +501,7 @@
     </main> 
     <script src="scripts/scroll-effect.js"></script>
     <script>
-        $(document).ready(function () {
+        let setLongestEmployee = () => {
             var maxHeight = 0;
             $('.staff').each(function() {
                 var height = $(this).height();
@@ -511,7 +510,10 @@
                 }
             });
             $('.staff').height(maxHeight);
-        });
+        }
+        // run on document ready and resize
+        $(document).ready(setLongestEmployee);
+        $(window).resize(setLongestEmployee);
 
     </script>
     <footer id="footer-wrapper"></footer>
